--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
  <hr>
  
  <h2>Связаться со мной</h2>
- <form action="/maxresdefault.jpg">
+ <form action="maxresdefault.jpg">
  <label for="name">Ваше средство уничтожения: </label>
  <input type="text" id="name" placeholder="Введите средство">
  <input type="submit" value="О ДА">
