--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
  <hr>
  
  <h2>Связаться со мной</h2>
- <form action="maxresdefault.jpg">
+ <form>
+    
  <label for="name">Ваше средство уничтожения: </label>
  <input type="text" id="name" placeholder="Введите средство">
- <input type="submit" value="О ДА">
+ <a href="maxresdefault.jpg" target="_blank">отправить</a>
  <br>
  <label for="number">Введите количество средств <br> в денежном эквиваленте (тыс.руб):</label>
 <input type="number" id="number" placeholder="Введите количество">
-<input type="submit" value="ЕЩЕЕЕЕЕ">
+<a href="maxresdefault.jpg" target="_blank">БОООЛЬШЕ</a>
 <br>
 <label for="date">Введите дату мероприятия:</label>
 <input type="date" id="date">
-<input type="submit" value="САМОЕ ВРЕМЯ">
+<a href="maxresdefault.jpg" target="_blank">САМОЕ ВРЕМЯ ДЛЯ</a>
 <br>
 <label for="text">Ваши пожелания:</label>
 <br>
